--- a/Lab-1/References.bib
+++ b/Lab-1/References.bib
@@ -8,7 +8,7 @@
   publisher={高等教育出版社},
   year={2000},
 }
-@book{陈家璧2008激光原理及应用,
+@book{chen2008,
   title={激光原理及应用.第2版},
   author={陈家璧 and 彭润玲},
   publisher={电子工业出版社},
